--- a/sass/components/_burger.scss
+++ b/sass/components/_burger.scss
@@ -35,7 +35,7 @@
   }
 
   #menu-main-menu {
-    position: absolute;
+    position: fixed;
     inset: 0;
     margin: auto;
     color: white;
@@ -53,7 +53,7 @@
     position: relative;
     z-index: 100;
     width: 38px;
-    height: 38px;
+    height: 32px;
 
     &__burger {
       display: flex;
@@ -63,6 +63,7 @@
       background: var.$white_700;
       transition: all 1s ease-in-out;
     }
+
     &::before,
     &::after {
       content: "";
@@ -89,8 +90,10 @@
 
   &.active {
     position: initial;
+
     .background {
       inset: 0;
+      position: fixed;
       margin: auto;
       width: 100%;
       height: 100%;
@@ -122,6 +125,7 @@
       &::before {
         transform: rotate(405deg);
       }
+
       &::after {
         transform: rotate(-405deg);
       }
