--- a/sass/components/_contact-form.scss
+++ b/sass/components/_contact-form.scss
@@ -15,6 +15,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    max-width: 95%;
+    margin-inline: auto;
   }
 
   label,
