--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,8 +1,9 @@
 @use "../abstracts" as var;
 
 header {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  justify-items: center;
+  grid-template-columns: 0.1fr 0.8fr 0.1fr;
   align-items: center;
   margin-left: 3em;
   margin-top: 0.6em;
@@ -10,9 +11,17 @@ header {
   position: relative;
     z-index: 99;
 
+  @include var.breakpoint(1570px) {
+    grid-template-columns: 0.05fr 0.85fr 0.1fr;
+  }
+
+  @include var.breakpoint(1491px) {
+    grid-template-columns: 0.03fr 0.82fr 0.15fr;
+  }
+
   @include var.breakpoint(1056px){
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    display: flex;
+    justify-content: space-between;
 
     .logo {
       grid-column: 1;
@@ -32,8 +41,18 @@ header {
   }
 }
 
+.logo_header {
+  grid-row: 1;
+  grid-column: 1;
+}
+
 .logo__header img {
   max-width: 100px;
+}
+
+#header-menu {
+  grid-row: 1;
+  grid-column: 2;
 }
 
 #menu-main-menu {
