--- a/sass/pages/_box-van.scss
+++ b/sass/pages/_box-van.scss
@@ -52,12 +52,17 @@
 	  display: flex;
 	  align-items: center;
 	  justify-content: center;
-	  padding: 0;
+	  padding: 0 0 0.6em 0;
 	  border-bottom: 1px solid var.$black_700;
-	  padding-bottom: 0.6em;
 	  margin-top: 1em;
 	  width: fit-content;
 	  width: -moz-fit-content;
+
+	  &:hover {
+		  color: var.$red_500;
+		  border-bottom-color: var.$red_500;
+	  }
+
 	  &::after {
 		  content: '+';
 		  margin-left: 1em;
@@ -88,6 +93,11 @@
 		color: var.$white_700;
 		text-decoration: none;
 		margin-top: 4em;
+
+		&:hover {
+			color: var.$red_500;
+			border-bottom-color: var.$red_500;
+		}
 	
 		&::after {
 			content: '+';
