--- a/sass/components/_burger.scss
+++ b/sass/components/_burger.scss
@@ -8,8 +8,8 @@
     justify-content: center;
     align-items: center;
     background: var.$red_500;
-    height: 100px;
-    width: 100px;
+    height: 75px;
+    width: 75px;
     align-self: center;
     justify-self: flex-end;
     border-top-left-radius: 50%;
@@ -28,8 +28,8 @@
       border-top-left-radius: 50%;
       border-bottom-left-radius: 50%;
       background: var.$red_500;
-      width: 100px;
-      height: 100px;
+      width: 75px;
+      height: 75px;
       transition: width 0.5s ease-in-out;
     }
   }
@@ -52,13 +52,13 @@
     flex-direction: column;
     position: relative;
     z-index: 100;
-    width: 38px;
-    height: 32px;
+    width: 32px;
+    height: 25px;
 
     &__burger {
       display: flex;
-      width: 38px;
-      height: 6px;
+      width: 28px;
+      height: 5px;
       border-radius: 5px;
       background: var.$white_700;
       transition: all 1s ease-in-out;
@@ -68,15 +68,15 @@
     &::after {
       content: "";
       display: block;
-      width: 38px;
-      height: 6px;
+      width: 32px;
+      height: 5px;
       border-radius: 5px;
       background: var.$white_700;
       transition: all 1s ease-in-out;
     }
 
     &::before {
-      margin-bottom: 0.3em;
+      margin-bottom: 5px;
     }
 
     &::after {
