--- a/sass/pages/_contact.scss
+++ b/sass/pages/_contact.scss
@@ -20,6 +20,8 @@
     box-shadow: 5px 10px 28px -4px rgba(0, 0, 0, 0.18);
     -webkit-box-shadow: 5px 10px 28px -4px rgba(0, 0, 0, 0.18);
     -moz-box-shadow: 5px 10px 28px -4px rgba(0, 0, 0, 0.18);
+    object-fit: cover;
+    object-position: center;
     img {
       width: 100%;
       height: 100%;
